styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
:root {
  --border: 1px solid #dce1e4;
  --gradient: linear-gradient(-45deg, #d000f7, #24bae3);
  --box-shadow: 5px 5px 15px #c1c8d3, -5px -5px 15px #fff;
}
html {
  scroll-behavior: smooth;
}
body {
  font-family: "Poppins", san-serif;
  background-color: #eaecee;
  color: #3c3e41;
  margin: 0;
  font-size: 15px;
}
a {
  color: #3c3e41;
  text-decoration: none;
}
header {
  padding: 10px;
  width: calc(100% - 20px);
  border-bottom: var(--border);
  display: grid;
  grid-template-columns: 30% 70%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #eaecee;
  z-index: 1;
}
header .logo img {
  height: 50px;
  width: 50px;
  border-radius: 100%;
  object-fit: cover;
}
header ul {
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: end;
  align-items: center;
}
header ul li {
  padding: 0 30px;
}
.container {
  width: 1200px;
  max-width: 80%;
  margin: 150px auto 0;
}
.banner {
  display: grid;
  grid-template-columns: 60% 40%;
  border-bottom: var(--border);
  padding-bottom: 50px;
}
.banner .content {
  text-align: justify;
}
.banner .content p {
  margin-right: 2em;
}
.banner .content h1 {
  font-size: 4em;
  margin: 0;
}
.gradientText {
  display: inline-block;
  background-image: var(--gradient);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
.job::before {
  content: attr(data-job1);
  overflow: hidden;
  display: inline-flex;
  animation:
    effectText 1s linear infinite alternate,
    changeText 4s linear infinite;
}

@keyframes effectText {
  from {
    max-width: 0;
  }
  to {
    max-width: 500px;
  }
}
@keyframes changeText {
  from {
    content: attr(data-job1);
  }
  to {
    content: attr(data-job2);
  }
}
.find {
  margin-top: 50px;
}
.find ul {
  padding: 0;
  list-style: none;
  display: flex;
}
.find ul li {
  width: 50px;
  height: 50px;
  box-shadow: var(--box-shadow);
  margin: 10px;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
}
.find ul li:hover {
  color: #fff;
  background-image: var(--gradient);
}
.banner .avatar img {
  width: 100%;
  box-shadow: var(--box-shadow);
}
.banner .avatar {
  text-align: center;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: end;
}
.banner .avatar::before {
  position: absolute;
  width: 90%;
  box-shadow: var(--box-shadow);
  content: "";
  bottom: 0;
  z-index: -1;
}
.title {
  text-align: center;
  padding-top: 50px;
  font-weight: 700;
  font-size: x-large;
}
#title {
  display: flex;
  align-items: center;
  justify-content: center;
}
#title .material-symbols-outlined {
  width: 35px;
  height: 35px;
  margin: 5px;
  box-sizing: border-box;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.material-symbols-outlined:hover {
  animation: wave 0.5s infinite alternate;
  background-image: var(--gradient);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  cursor: pointer;
}

@keyframes wave {
  0% {
    rotate: 0deg;
  }
  100% {
    rotate: 15deg;
  }
}
.timeline-items:hover span {
  color: #fff;
  background-image: var(--gradient);
}
.experience {
  padding: 10px 5px;
}
.experience h2 {
  margin-bottom: 2em;
  vertical-align: baseline;
}
.timeline-items {
  max-width: 1200px;
  margin: auto;
  display: flex;
  flex-wrap: wrap;
  position: relative;
  transition: 0.5s;
}
.timeline-items:hover .timeline-dot {
  background: var(--gradient);
  -webkit-background-clip: border-box;
  background-clip: border-box;
  -webkit-text-fill-color: transparent;
}
.timeline-items:hover .timeline-date {
  background: var(--gradient);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.timeline-items::before {
  content: "";
  position: absolute;
  width: 5px;
  height: 100%;
  background-color: #3c3e41;
  left: calc(50% - 1px);
}
.timeline-items:hover:before {
  background: var(--gradient);
  -webkit-background-clip: border-box;
  background-clip: border-box;
  -webkit-text-fill-color: transparent;
}
.timeline-item {
  margin-bottom: 40px;
  width: 100%;
  position: relative;
}
.timeline-item:last-child {
  margin-bottom: 0;
}
.timeline-item:nth-child(odd) {
  padding-right: calc(50% + 30px);
  text-align: right;
}
.timeline-item:nth-child(even) {
  padding-left: calc(50% + 30px);
}
.timeline-dot {
  height: 21px;
  width: 21px;
  background-color: #3c3e41;
  box-shadow:
    0 0 25px #3c3e41,
    0 0 50px #3c3e41;
  position: absolute;
  left: calc(50% - 8px);
  border-radius: 50%;
}
.timeline-date {
  font-size: 20px;
  font-weight: 800;
}
.listskill {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  border-bottom: var(--border);
  padding-bottom: 50px;
  margin-top: 50px;
}
.listskill .evaluate {
  width: 100%;
  height: 20px;
  box-shadow: var(--box-shadow);
  border-radius: 10px;
  margin-top: 20px;
  position: relative;
}
.listskill .evaluate::before {
  position: absolute;
  height: 100%;
  width: var(--point);
  content: "";
  background-image: var(--gradient);
  border-radius: 10px;
}
.listproject {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  border-bottom: var(--border);
  padding-bottom: 50px;
  margin-top: 50px;
}
.listproject .item {
  text-align: center;
  box-shadow: var(--box-shadow);
  box-sizing: border-box;
  padding: 20px;
  border-radius: 10px;
  font-weight: bold;
  font-size: medium;
  position: relative;
  cursor: pointer;
}
.listproject .item .name {
  text-align: start;
  padding: 15px 0;
}
.listproject .item img {
  width: 90%;
  height: 200px;
  border-radius: 20px;
  object-fit: cover;
}

.icon-container i {
  font-size: 20px;
}
.icon-container {
  position: absolute;
  bottom: 10px;
  right: 10px;
  gap: 5px;
  z-index: 9999;
}

.listproject .item:hover i {
  background-image: var(--gradient);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  cursor: pointer;
}
.contact {
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
}
.contact li {
  width: 50px;
  height: 50px;
  margin: 20px;
  box-shadow: var(--box-shadow);
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
}
.contact li:hover {
  color: #fff;
  background-image: var(--gradient);
}
header input,
header .navdiv,
header ul label {
  display: none;
}
@media screen and (max-width: 1024px) {
  .banner .content h1 {
    font-size: 2em;
  }
  .listproject {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media screen and (max-width: 767px) {
  header ul {
    position: fixed;
    background-color: #f0f3f5;
    width: 70%;
    height: 100vh;
    left: 0;
    top: 0;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(5, 70px);
    margin: 0;
    transform: translateX(-100%);
    transition: 0.5s;
  }
  header .navdiv {
    display: flex;
    justify-content: end;
    align-items: center;
  }
  header label {
    width: 50px;
    height: 50px;
    box-shadow: var(--box-shadow);
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  input#menu:checked ~ .nav {
    transform: translateX(0);
  }
  header .nav label {
    display: flex;
    transform: translateX(20px);
  }
  .banner {
    grid-template-columns: 1fr;
  }
  .banner .content {
    padding-right: 0;
  }
  .banner .avatar {
    grid-row-start: 1;
  }
  .listskill .listproject {
    grid-template-columns: 1fr;
  }
}
.slider {
  width: 100%;
  height: var(--height);
  overflow: hidden;
  -webkit-mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
}
.slider .list {
  display: flex;
  width: 100%;
  min-width: calc(var(--width) * var(--quantity));
  position: relative;
  padding-top: 1em;
}
.slider .list .item {
  width: var(--width);
  height: var(--height);
  position: absolute;
  left: 100%;
  animation: autoRun 10s linear infinite;
  animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1));
}
.slider .list .item img {
  width: 100%;
  height: 100%;
}

.slider:hover .item {
  animation-play-state: paused !important;
}
@keyframes autoRun {
  from {
    left: 100%;
  }
  to {
    left: calc(var(--width) * -1);
  }
}

/* project modal */
.project-container {
  display: none;
  position: absolute;
  left: 50%;
  top: 100%;
  transform: translate(-50%, -50%);
  width: 1000px;
  height: 600px;
  padding: 50px;
  background-color: #f5f5f5;
  box-shadow: 0 30px 50px #dbdbdb;
}

#project-slide {
  width: fit-content;
  margin-top: 50px;
}
.project-item {
  position: absolute;
  width: 200px;
  height: 300px;
  background-position: 50% 50%;
  background-size: auto 100%;
  display: inline-block;
  transition: 0.5s;
  z-index: 1;
  top: 50%;
  transform: translate(0, -50%);
  border-radius: 20px;
  box-shadow: 0 30px 50px #505050;
  object-fit: cover;
  background-repeat: no-repeat;
}

.project-item:nth-child(1) {
  left: 0;
  top: 0;
  transform: translate(0, 0);
  border-radius: 0;
  width: 100%;
  height: 100%;
  box-shadow: none;
}

.project-item:nth-child(2) {
  left: 50%;
}
.project-item:nth-child(3) {
  left: calc(50% + 220px);
}
.project-item:nth-child(4) {
  left: calc(50% + 440px);
}
.project-item:nth-child(n + 5) {
  left: calc(50% + 660px);
  opacity: 0;
}
.project-item .project-content {
  position: absolute;
  top: 50%;
  left: 100px;
  width: 300px;
  text-align: left;
  padding: 0;
  color: #eee;
  transform: translateY(-50%);
  display: none;
  font-family: "system-ui";
}
.buttons {
  position: absolute;
  bottom: 30px;
  z-index: 9999;
  text-align: center;
  width: 100%;
}
#slide-button {
  position: absolute;
  z-index: 9999;
  bottom: 95%;
  right: 10px;
}
.buttons button {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: 1px solid #555;
  transition: 0.5s;
}
.buttons button:hover {
  background-image: var(--gradient);
}
.project-item:nth-child(2) .project-content {
  display: block;
  z-index: 999;
}

.project-item .project-name {
  font-size: 40px;
  font-weight: bold;
  opacity: 0;
  animation: showcontent 1s ease-in-out 1s forwards;
}
.project-item .project-desc {
  margin: 20px 0;
  opacity: 0;
  animation: showcontent 1s ease-in-out 0.3s forwards;
}
.project-item button {
  padding: 10px 20px;
  border: none;
  opacity: 0;
  animation: showcontent 1s ease-in-out 0.6s forwards;
}

@keyframes showcontent {
  from {
    opacity: 0;
    transform: translateY(-50%);
    filter: blur(33px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
    filter: blur(0);
  }
}

